# trabalho_gcs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adaptacoes.md  auditoria-cruzada.md  auditoria.md  itens-de-configuracao.md  uso-de-ia.md
docs/adr/: 0001-nomenclatura-classes.md  0002-modelo-ramificacao.md
docs/relatorios/: status-v0.1-functional.md  status-v0.3-jfloat.md  status-v0.4.md  status-v1.0.0.md
javalang/: jfloat.py  jinteger.py  jstring.py
relatorios/: status-v0.2.md
tests/: test_interop.py  test_jfloat.py  test_jinteger.py  test_jstring.py
