[project]
name = "trabalho-gcs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
addopts = "--cov=javalang --cov-report=term-missing"
testpaths = ["tests"]