[project]
name = "javalang-py-gcs"
version = "0.1.0"
description = "Implementação em Python de classes inspiradas em String, Integer e Float do Java SE 8"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=javalang --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"